--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,29 +1,18 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Articles</h1>
+<h1>Articles Listing Page</h1>
 
 <table>
   <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
+    <th>Title</th>
+    <th>Description</th>
+    <th>Actions</th>
+   
   </thead>
-
   <tbody>
-    <% @articles.each do |article| %>
-      <tr>
-        <td><%= article.title %></td>
-        <td><%= article.description %></td>
-        <td><%= link_to 'Show', article %></td>
-        <td><%= link_to 'Edit', edit_article_path(article) %></td>
-        <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+  <tr><% @articles.each do |article| %>
+    <td><%= article.title%></td>
+    <td><%= article.description %>Some Descript</td>
+    <td>Placeholders</td>
+  </tr>
+  <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Article', new_article_path %>
