--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,15 +4,23 @@
   <thead>
     <th>Title</th>
     <th>Description</th>
-    <th>Actions</th>
+    <th colspan="3">Actions</th>
    
   </thead>
   <tbody>
   <tr><% @articles.each do |article| %>
     <td><%= article.title%></td>
     <td><%= article.description %>Some Descript</td>
-    <td>Placeholders</td>
+    <td><%= link_to 'Show', article_path(article) %></td>
+    <td><%= link_to 'Edit', edit_article_path(article) %></td>
+    <td><%= link_to 'Delete', article_path(article), method: :delete, data: {confirm: "Are you sure?"} %></td>
+
   </tr>
   <% end %>
   </tbody>
 </table>
+<p>
+<%= link_to 'Create new article', new_article_path %>
+</p>
+
+<%= link_to 'Home page', root_path %>
