--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New Article</h1>
+<%= render 'form' %>
 
-<%= render 'form', article: @article %>
-
-<%= link_to 'Back', articles_path %>
+<%= link_to 'Return to articles listing', articles_path %>
