--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,24 +1,25 @@
-<h1>Create a new article</h1>
-
-<% if @article.errors.any? %>
-<h2>The following errors prevented the article from being saved</h2>
-  <ul>
-    <% @article.errors.full_messages.each do |msg|  %>
-      <li><%= msg %></li>
-    <% end%>
-  </ul>
-<% end %>
-
-<%= form_with(model: @article, local:true) do |f| %>
-  <p>
-    <%= f.label :title%>
-    <%= f.text_field :title%>
-  </p>
-  <p>
-    <%= f.label :description%>
-    <%= f.text_area :description%>
-  </p>
-
-  <p><%= f.submit%></p>
-
-<% end %>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-10">
+      <%= render 'shared/errors' %>
+      <%= form_with(model: @article, class: "shadow mb-3 p-3 bg-info rounded", local:true) do |f| %>
+        <div class="form-group row">
+          <%= f.label :title, class:"col-2 col-form-label text-light"%>
+          <div class="col-10">
+            <%= f.text_field :title, class:"form-control", placeholder: "Title of Article"%>
+          </div>
+        </div>
+        <div class="form-group row">  
+          <%= f.label :description, class:"col-2 col-form-label text-light"%>
+          <div class="col-10">
+            <%= f.text_area :description, rows: 10, class:"form-control shadow rounded", placeholder: "Description of Article"%>
+          </div>
+        </div>
+        <div class="form-group row justify-content-center">
+          <p><%= f.submit class: "btn btn-outline-light btn-lg shadow rounded"%></p>
+        </div>
+      <% end %>
+    </div>
+    <%= link_to '[ Cancel and return to articles listing ]', articles_path, class:"text-info" %>
+  </div>
+</div>
