--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,3 +1,6 @@
-<%= render 'form' %>
+<div id="page-content">
+  <h1 class="text-center mt-4">Edit Article</h1>
 
-<%= link_to 'Cancel and return to articles listing', articles_path %>
+  <%= render 'form' %>
+
+</div>
