--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,3 +1,7 @@
-<%= render 'form' %>
+<div id="page-content">
+  <h1 class="text-center mt-4">Create new Article</h1>
 
-<%= link_to 'Return to articles listing', articles_path %>
+  <%= render 'form' %>
+
+
+</div>
