--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,16 +2,14 @@
 <html>
   <head>
     <title>Demoapp</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
+    <%= csrf_meta_tags %> <%= csp_meta_tag %> 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-  <%= render 'layouts/messages' %>
-
+  <body class="d-flex flex-column">
+    <p><%= render 'layouts/messages' %> 
+    <%= render 'layouts/navigation' %></p>
     <%= yield %>
   </body>
 </html>
