--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,8 +1,22 @@
-<h1>Showing Article Details</h1>
-
-<p><strong>Title: </strong><%= @article.title %></p>
-<p><strong>Description: </strong><%= @article.description %></p>
-
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Delete', article_path(@article), method: :delete, data: {confirm: "Are you sure?"} %>
-<%= link_to 'Return to articles listing', articles_path %>
+<h2 class="text-center mt-4"><%= @article.title%></h2>
+<div class="container">
+  <div class="row justify-content-md-center">
+    <div class="col-8 mt-4">
+      <div class="card text-center shadow mb-5 bg-white rounded" >
+        <div class="card-header font-italic">
+          by Moi de Moi
+        </div>
+        <div class="card-body">
+          <div class="card-text text-left"><%= simple_format(@article.description) %></div>
+          <span><%= link_to 'Edit', edit_article_path(@article), class: 'btn btn-outline-info' %></span>
+          <span><%= link_to 'Delete', article_path(@article), method: :delete, class: 'btn btn-outline-danger' %></span>
+        </div>
+        <div class="card-footer text-muted">
+          <small>created <%= time_ago_in_words(@article.created_at) %> ago,
+          edited <%= time_ago_in_words(@article.updated_at) %> ago</small>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<%= link_to 'Create new article', new_article_path %>
