--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-10">
-      <%= render 'shared/errors' %>
+      <%= render 'shared/errors', obj: @article %>
       <%= form_with(model: @article, class: "shadow mb-3 p-3 bg-info rounded", local:true) do |f| %>
         <div class="form-group row">
           <%= f.label :title, class:"col-2 col-form-label text-light"%>
@@ -16,7 +16,7 @@
           </div>
         </div>
         <div class="form-group row justify-content-center">
-          <p><%= f.submit class: "btn btn-outline-light btn-lg shadow rounded"%></p>
+          <p><%= f.submit, class: "btn btn-outline-light btn-lg shadow rounded"%></p>
         </div>
       <% end %>
     </div>
