--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -22,7 +22,7 @@
           </div>
         </div>
         <div class="form-group row justify-content-center">
-          <p><%= f.submit "Sign up", class: "btn btn-outline-light btn-lg shadow rounded"%></p>
+          <p><%= f.submit(@user.new_record? ? "Sign up" : "Update account", class: "btn btn-outline-light btn-lg shadow rounded")%></p>
         </div>
       <% end %>
     </div>
