--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -16,7 +16,7 @@
           </div>
         </div>
         <div class="form-group row justify-content-center">
-          <p><%= f.submit, class: "btn btn-outline-light btn-lg shadow rounded"%></p>
+          <p><%= f.submit class: "btn btn-outline-light btn-lg shadow rounded"%></p>
         </div>
       <% end %>
     </div>
