--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,11 @@
 <h1 class="text-center mt-4">Listing all Articles</h1>
- <%= render 'article'%>
-<%# <%= link_to 'Create new article', new_article_path %>
+
+<div class="flickr_pagination">
+  <%= will_paginate @articles, :container => false %>
+</div>
+<%= render 'article'%>
+<div class="flickr_pagination mb-4">
+  <%= will_paginate @articles, :container => false %>
+</div>
 
 
