--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,11 +5,14 @@
       <div class="card text-center shadow mb-5 bg-white rounded" >
         <div class="card-header font-italic">
           by <%= @article.user.username if @article.user %>
+          <%= link_to gravatar_for(@article.user), user_path(@article.user) %>
         </div>
         <div class="card-body">
           <div class="card-text text-left"><%= simple_format(@article.description) %></div>
-          <span><%= link_to 'Edit', edit_article_path(@article), class: 'btn btn-outline-info' %></span>
-          <span><%= link_to 'Delete', article_path(@article), method: :delete, class: 'btn btn-outline-danger' %></span>
+          <% if logged_in? && ( @article.user == current_user || current_user.admin? ) %>
+            <span><%= link_to 'Edit', edit_article_path(@article), class: 'btn btn-outline-info' %></span>
+            <span><%= link_to 'Delete', article_path(@article), method: :delete, class: 'btn btn-outline-danger' %></span>
+          <% end %>
         </div>
         <div class="card-footer text-muted">
           <small>created <%= time_ago_in_words(@article.created_at) %> ago,
@@ -19,4 +22,3 @@
     </div>
   </div>
 </div>
-<%= link_to 'Create new article', new_article_path %>
