--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,9 @@
 <h1 class="text-center mt-4">Alpha Bloggers</h1>
 
+<div class="flickr_pagination">
+  <%= will_paginate @users, :container => false %>
+</div>
+
 <div class="container">
   <% @users.each do |user| %>
     <div class="row justify-content-md-center">
@@ -15,13 +19,25 @@
             </div>
             <p class="card-text"><%= pluralize(user.articles.count, 'article') %></p>
             <span> <%= link_to 'View Profile', user, class: 'btn btn-outline-success' %></span>
-            <span><%= link_to 'Edit Profile', edit_user_path(user), class: 'btn btn-outline-info' %></span>
+            <% if logged_in? %>
+              <% if user == current_user %>
+                <span><%= link_to 'Edit Profile', edit_user_path(user), class: 'btn btn-outline-info' %></span>
+              <% end %>
+              <% if current_user.admin? %>
+                <%= link_to "Delete User", user_path(user), class: 'btn btn-outline-danger', 
+                  method: :delete, data: {confirm: "Atr you sure you want to delete the user and all thier artivles and data."}%>
+              <% end %>
+            <% end%>
           </div>
           <div class="card-footer text-muted">
-            <small>Joined<%= time_ago_in_words(user.created_at) %> ago,
+            <small>Joined<%= time_ago_in_words(user.created_at) %> ago, </small>
           </div>
         </div>
       </div>
     </div>
   <% end %>
+</div>
+
+<div class="flickr_pagination mb-4">
+  <%= will_paginate @articles, :container => false %>
 </div>
