--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,21 @@
 <h1 class="text-center mt-4"><%= @user.username%>'s profile</h1>
-<%= render 'form' %>
-<div class="text-center" >
+<div class="text-center mt-4" >
   <img src="https://source.unsplash.com/random/200x200/">
+</div>
+<div class="text-center mt-4">
+<% if logged_in? && @user == current_user%>
+  <%= link_to "Edit your profile", edit_user_path(@user), class: "btn btn-outline-info" %>
+<% end %>
 </div>
 
 <h3 class="text-center mt-4">Articles</h3>
 
+<div class="flickr_pagination">
+  <%= will_paginate @articles, :container => false %>
+</div>
+
 <%= render 'articles/article'%>
+
+<div class="flickr_pagination mb-4">
+  <%= will_paginate @articles, :container => false %>
+</div>
