--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,9 +3,14 @@
   <div class="row justify-content-md-center">
     <div class="col-8 mt-4">
       <div class="card text-center shadow mb-5 bg-white rounded" >
-        <div class="card-header font-italic">
-          by <%= @article.user.username if @article.user %>
+        <div class="card-header column font-italic">
+          <p>by <%= @article.user.username if @article.user %></p>
           <%= link_to gravatar_for(@article.user), user_path(@article.user) %>
+          <% if @article.categories.any? %>
+            <div class="mt-2">
+              <%= render @article.categories %>
+            </div>
+          <% end %>
         </div>
         <div class="card-body">
           <div class="card-text text-left"><%= simple_format(@article.description) %></div>
